# rusty-picard

./: Cargo.toml
src/: api.rs  domain.rs  main.rs  parser.rs  schemas.rs
src/parser/: aggregate.rs  api.rs  except.rs  filter.rs  intersect.rs  join.rs  scan.rs  shared.rs  sort.rs  top.rs  top_sort.rs  union.rs  utils.rs
