[package]
name = "rusty-picard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
axum-macros = "0.4"
futures = "0.3"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = "0.19"
tokio = { version = "1.37", features = ["full"] }
tower = "0.4"
winnow = { version = "0.6" }
tracing = "0.1"
tracing-subscriber = "0.3"
